--- a/style.css
+++ b/style.css
@@ -1,34 +1,44 @@
 html {
     display: flex;
     flex-direction: column;
-    margin: 2rem;
+    margin: 1rem;
     font-family: Comicraft MS Neue,;
     overflow-y: hidden;
+    padding: 1rem 1rem;
 }
 
 .title {
     font-family: Comicraft MS Neue, cursive;
-    font-size: 2.5rem;
-    position: absolute;
+    font-size: 2rem;
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke: 2px green;
     border: .1rem solid green;
-    width: 21.6rem;
-    m
+    width: 35rem;
+    display: flex;
+    gap :1rem;
+    
 }
 
+#homePage{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+
 .flag {
-    width: 10%;
-    height: 10%;
+    width: 5rem;
+    height: 5rem;
     transform: rotate(-15deg);
 }
 
 .kk {
-    width: 20%;
-    height: 40%;
+    align-self: flex-end;
+    width: 6rem;
+    height: 4rem;
     transform: rotate(-55deg);
-    position: absolute;
-    left: 8rem;
     top: -1rem;
     animation: pulse 1.5s infinite alternate; 
 }
@@ -39,8 +49,7 @@ html {
 }
 
 form {
-    position: absolute;
-    top: 10rem;
+    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -69,11 +78,12 @@ form {
 }
 
 h6 {
-    position: absolute;
-    top: 38rem;
+   position: fixed;
+    top: 36rem;
     font-family: Comicraft MS Neue;
-    left: 10rem;
+    left: 40rem;
 }
+
 
 #follower {
     width: 30px;
@@ -113,10 +123,10 @@ h6 {
 
  #won {
       position: absolute;
-      left: 2rem; 
+      padding: 4rem;
+      left: 30rem; 
       overflow: hidden; 
       transition: left 0.5s; 
-      top: 10rem; 
       font-family: 'Trebuchet MS';
       font-size: bolder;
       color: green;
@@ -133,6 +143,7 @@ h6 {
     background: green;
     text-decoration:none;
     font-family:Monospace;
+    cursor: pointer;
     
 }
  
@@ -184,3 +195,40 @@ h6 {
     margin-top: 0rem;
     z-index: 100;
 }
+
+@media (min-width:360px){
+    html{
+        font-size: 60%;
+        background-color: green;
+        
+    }
+
+    .title{
+        border: .1rem solid white;
+        -webkit-text-fill-color: transparent;
+        -webkit-text-stroke: 2px white;
+         gap: 0.3rem;
+    }
+
+    form{
+        gap: 2rem;
+        border: 0.1rem solid white;
+    }
+
+    .button1{
+        background-color: white;
+        color: green;
+        width: 12rem;
+        font-weight:bolder;
+    }
+
+    h6 {
+        position: absolute;
+         font-size: 1rem;
+         top: 60rem;
+         left: 15rem;
+        
+     }
+}
+
+
